syntax = "proto3";

option go_package = "github.com/smartcontractkit/chainlink-common/pkg/capabilities/v2/http";

import "capabilities/v2/protoc/pkg/pb/cre_metadata.proto";

enum Method {
  GET = 0;
  POST = 1;
  PUT = 2;
  DELETE = 3;
}

message Request {
  string url = 1;
      Method method = 2;
  map<string, string> headers = 3;
  bytes body = 4;
  int32 timeout_ms = 5;
}

message Response {
  string error_message = 1;
  uint32 status_code = 2;
  map<string, string> headers = 3;
  bytes body = 4;
}

service Client {
  option (cre.metadata.capability) = {
    mode: Node
    capability_id: "http-actions@0.1.0"
  };
  rpc SendRequest (Request) returns (Response);
}